--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.6.2",
     "node-sass": "^6.0.0",
-    "puppeteer": "^1.20.0",
+    "puppeteer": "^2.0.0",
     "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
     "ts-loader": "^5.4.5",
-    "tsbase": "^4.9.0",
+    "tsbase": "../tsbase/dist",
     "tslib": "^2.3.1",
     "tsmockit": "^1.3.0",
     "typescript": "^4.4.4",
