--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.6",
     "ts-loader": "^5.4.5",
-    "tsbase": "../tsbase/dist",
+    "tsbase": "^4.9.3",
     "tslib": "^2.3.1",
     "tsmockit": "^1.3.0",
     "typescript": "^4.4.4",
